# FinnAndKaiGame

./: CMakeLists.txt  FinnKaiGame.sln  LICENSE  README.md  build.ps1  build_automate.ps1  conanfile.txt
.github/workflows/: cmake.yml
FinnKaiGame/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Entity.h  EntityManager.h  FinnKaiGame.cpp  FinnKaiGame.vcxproj  FinnKaiGame.vcxproj.filters  GameEngine.cpp  GameEngine.h  ISystem.h  InputComponent.h  JumpCommand.h  Scene.h  TestCollisionSystem.cpp  TestDrawSystem.cpp  TestDrawSystem.h  TestInputSystem.cpp  TestInputSystem.h  TestMovementSystem.h  TestRenderSystem.cpp  TestRenderSystem.h  TestScene.cpp  TestScene.h  TestSystem.h  Texture.cpp  Texture.h  TransformComponent.h  config.txt  config.xml  imgui.ini  kai.txt
FinnKaiGame/Common/: Animation.cpp  Animation.h  CMakeLists.txt  Entity.h  IComponent.h  ISystem.h  Scene.cpp  Scene.h  Texture.cpp
FinnKaiGame/Common/Core/: EntityManager.h
FinnKaiGame/Common/Interfaces/: ICommand.h
FinnKaiGame/Common/Utils/: Utils.h
FinnKaiGame/Components/: AnimationComponent.h  GravityComponent.h
FinnKaiGame/Core/: AssetManager.cpp  AssetManager.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  NetworkManager.cpp  NetworkManager.h  SceneManager.h
FinnKaiGame/GameClient/: CMakeLists.txt  FinnKaiGame.cpp  TestScene.cpp
FinnKaiGame/GameClient/Core/: CMakeLists.txt
FinnKaiGame/GameClient/Core/Engine/: GameEngine.cpp  GameEngine.h
FinnKaiGame/GameClient/Core/Framework/: Scene.h  Texture.cpp
FinnKaiGame/GameClient/Core/Managers/: AssetManager.cpp  NetworkManager.cpp  NetworkManager.h
FinnKaiGame/GameClient/Game/: CMakeLists.txt
FinnKaiGame/GameClient/Game/Systems/: TestAnimationSystem.cpp  TestAnimationSystem.h  TestCollisionSystem.h  TestInputSystem.cpp  TestRenderSystem.cpp
FinnKaiGame/GameClient/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
FinnKaiGame/GameClient/src/: main.cpp
FinnKaiGame/GameServer/: CMakeLists.txt  FinnKaiGame.cpp  GameServer.cpp  GameServer.h  TestScene.h
FinnKaiGame/GameServer/Core/: GameServer.cpp  GameServer.h
FinnKaiGame/GameServer/src/: main.cpp
FinnKaiGame/Systems/: TestAnimationSystem.cpp  TestAnimationSystem.h  TestCollisionSystem.h  TestInputSystem.cpp  TestInputSystem.h  TestMovementSystem.h  TestRenderSystem.cpp  TestRenderSystem.h  TestSystem.cpp  TestSystem.h
FinnKaiGame/imgui/: imgui_impl_sdlrenderer.h
